syntax = "proto3";

option go_package = "./pb";

import "common.proto";

message Pdata {
  string pname = 1;
  string ptype = 2;
  bytes pdata = 3;
  bytes keyHash = 4;
}

message AddPdataRequest {Pdata pdata = 1;}
message AddPdataResponse {Response response = 1;}

service PrivateData {
  rpc AddPdata(AddPdataRequest) returns (AddPdataResponse) {}
}

